# workshop-docker-ao-vivo

./: Dockerfile  README.md  app.py  pyproject.toml
