[project]
name = "workshop-docker-ao-vivo"
version = "0.1.0"
description = ""
authors = [
    {name = "lucas-m-cavalheiro",email = "lucas.cavalheiro@solfacil.com.br"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.56.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
